# vEPC

./: .dockerignore  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  ENHANCEMENT_REPORT.md  GIT_PUSH_GUIDE.md  Makefile  README.md  docker-compose.yml  interfaces.conf  main.cpp  monitoring.sh  panel_cli.sh  panel_dashboard.sh  panel_log.sh  panel_server.sh  setup.sh  test_diameter_parser.cpp  test_gtp_parser.cpp  test_s11_gtpc_client.cpp  test_s1ap_parser.cpp  test_s6a_diameter_client.cpp  vmme.conf  vsgsn.conf
ansible/: README.md  inventory  vepc-deploy.yml
ansible/group_vars/: vepc_hosts.yml
ansible/templates/: .dockerignore.j2  Dockerfile.j2  deployment_info.txt.j2  docker-compose.yml.j2  vepc.service.j2
ansible/templates/config/: interfaces.conf.j2  vepc.config.j2  vmme.conf.j2  vsgsn.conf.j2
build-win/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  vEPC.slnx  vepc-cli.vcxproj  vepc-cli.vcxproj.filters  vepc.vcxproj  vepc.vcxproj.filters
build-win/vepc-cli.dir/Debug/: vepc-cli.exe.recipe  vepc-cli.ilk
build-win/vepc-cli.dir/Debug/vepc-cli.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build-win/vepc.dir/Debug/: vepc.exe.recipe  vepc.ilk
build-win/vepc.dir/Debug/vepc.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build-win/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
build-win/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: ALL_BUILD.lastbuildstate  CustomBuild.read.1.tlog
build-win/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
build-win/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
cli/: cisco_cli_commands.h  cli_server.h  linux_interface.h  vepc-cli.cpp
cmake/: SyncBinaryToRoot.cmake  TestGtpuTelemetry.cmake  TestRuntimeStateRecovery.cmake  TestRuntimeStateRestore.cmake  TestS11ActivatePdp.cmake  TestS11DeletePdp.cmake  TestS11Echo.cmake  TestS11FailureReport.cmake  TestS11Identification.cmake  TestS11NoteMsPresent.cmake  TestS11PduNotification.cmake  TestS11PduNotificationReject.cmake  TestS11Telemetry.cmake  TestS11UpdatePdp.cmake  TestS6aAuth.cmake  TestS6aCancelLocation.cmake  TestS6aDeleteSubscriberData.cmake  TestS6aDisconnect.cmake  TestS6aInsertSubscriberData.cmake  TestS6aLocation.cmake  TestS6aPurge.cmake  TestS6aTelemetry.cmake  TestS6aWatchdog.cmake
config/: interfaces.conf  interfaces_old.conf  mme.cfg  sgsn.cfg  vepc.config  vmme.conf  vsgsn.conf
cpp-debug-module/: CMakeLists.txt  README.md
cpp-debug-module/include/debug_module/: debug_module.h
cpp-debug-module/src/: CMakeLists.txt  main.cpp
cpp-debug-module/src/modules/: debug_module.cpp
cpp-debug-module/tests/: test_debug_module.cpp
documentation/: ROADMAP.md
my-cpp-project/: CMakeLists.txt  Makefile  README.md
my-cpp-project/include/modules/: debug_module.h
my-cpp-project/src/: main.cpp
my-cpp-project/src/modules/: debug_module.cpp
my-cpp-project/tests/: test_debug_module.cpp
src/: diameter_parser.cpp  diameter_parser.h  gtp_parser.cpp  gtp_parser.h  imsi_module.cpp  imsi_module.h  s1ap_parser.cpp  s1ap_parser.h  subscriber_config.h
tests/: imsi_module_test.cpp  test_cli_guidance.cpp  test_config_path.cpp  test_diameter_parser.cpp  test_gtp_parser.cpp  test_iface_table.cpp  test_linux_interface.cpp  test_runtime_cli.cpp  test_s1ap_parser.cpp  test_s6a_diameter_client.cpp  test_subscriber_config.cpp
tools/: auto_push.sh  auto_watch.sh
web/: Dockerfile  README.md  index.html  package.json  wait-for-socket.sh
web/api/: package.json  server.js
web/src/: AdminPanel.jsx  App.css  App.jsx  CliConsole.jsx  ImsiManager.jsx  Interfaces.jsx  Runtime.jsx  ShowConfig.jsx
